@@ -4394,6 +4394,14 @@ function onFlip() {
  * Find drawer
  */
 $.determineDrawer = function( id ){
+    if (id === 'auto') {
+        // Our WebGL drawer is not as performant on iOS at the moment, so we use canvas there.
+        // Note that modern iPads report themselves as Mac, so we also check for coarse pointer.
+        const isPrimaryTouch = window.matchMedia('(pointer: coarse)').matches;
+        const isIOSDevice = /iPad|iPhone|iPod|Mac/.test(navigator.userAgent) && isPrimaryTouch;
+        id = isIOSDevice ? 'canvas' : 'webgl';
+    }
+
     for (const property in OpenSeadragon) {
         const drawer = OpenSeadragon[ property ];
         const proto = drawer.prototype;
